--- a/doc/internlevererans.1
+++ b/doc/internlevererans.1
@@ -1,7 +1,7 @@
 Internleverans #1 av AutoSite
 -----------------------------
 
-T.f. tf. beställare: Mattias Wingstedt
+T.f. beställare: Mattias Wingstedt
 Leveransdatum: Fredagen den 17 juli.
 
 Följande ska finnas och fungera:
