--- a/TODO
+++ b/TODO
@@ -16,13 +16,13 @@ o  SSL authentification
 > </limit>
 
 
-o  Support netmasks everywhere where ip-patterns are now
-   supported. Preferably using the xxx.xxx.xxx.xxx/mask synytax, like:
-   130.236.253.0/24, and 194.52.182.64/26.
+o Support netmasks everywhere where ip-patterns are now
+  supported. Preferably using the xxx.xxx.xxx.xxx/mask syntax, like:
+  130.236.253.0/24, and 194.52.182.64/26.
 
 o "Bookmarks" in the configuration interface (it is, of course,
-   possible to use _actual_ bookmarks in your browser, but then at least
-   Netscape insist on cacheing the page).
+  possible to use _actual_ bookmarks in your browser, but then at least
+  Netscape insists on cacheing the page).
 
 o The possibility for modules to add their own buttons to the
   configuration interface. This code is still present in some parts of
