--- a/doc/TODO
+++ b/doc/TODO
@@ -3,10 +3,10 @@ TODO list for AutoSite
 	
 WebAdmin
 --------------------------------------------------------------------------------
+* Make start screen
+
 * Redirect when 'remove file', 'remove directory',
   'move file' and 'move directory' are complete.
-
-* New Menu editor tab.
 
 * New wizards in HTML-Editor:
   - Move file
@@ -17,3 +17,14 @@ WebAdmin
 * Make tags in webadm-template for:
   - tablify
   - error
+
+* Make some kind of manual
+
+* Template Editor
+  - Make templates and nav-templates	
+  - Fix variables
+  - Fix variable help
+  - Save value, not name, in database when type='select'
+
+* New Menu editor tab.
+
