Disabled buttons are visible but shaded. Template schemes in db are splitted in two parts
Rev: doc/TODO:1.3
Rev: doc/db.spec:1.15
Rev: modules/admin/actions/20:Add_customer/page.html:1.8
Rev: modules/autoweb/Tab.pmod:1.11
Rev: modules/autoweb/tabs/10:Template_Editor/page.html:1.9
Rev: modules/autoweb/tabs/20:HTML_Editor/page.pike:1.16
Rev: modules/autoweb/tabs/20:HTML_Editor/wizards/move_directory.pike:1.5
Rev: modules/autoweb/tabs/20:HTML_Editor/wizards/move_file.pike:1.3
Rev: modules/autoweb/templates/default.tmpl:1.11
Rev: modules/autoweb/webadm.pike:1.21
Rev: sites/1/index.html:1.5
Rev: templates/tmpl1.tmpl:1.5
Rev: tools/templateinfo.html:1.13

--- a/doc/TODO
+++ b/doc/TODO
@@ -2,29 +2,20 @@ TODO list for AutoSite
 
 	
 WebAdmin
---------------------------------------------------------------------------------
-* Make start screen
-
-* Redirect when 'remove file', 'remove directory',
-  'move file' and 'move directory' are complete.
-
-* New wizards in HTML-Editor:
-  - Move file
-  - Add to menu
-
+--------
 * Nicer file browser.
-
-* Make tags in webadm-template for:
-  - tablify
-  - error
-
-* Make some kind of manual
+  - All buttons are always visible, but some are disabled (grey-ed out).
 
 * Template Editor
   - Make templates and nav-templates	
   - Fix variables
   - Fix variable help
-  - Save value, not name, in database when type='select'
 
-* New Menu editor tab.
+* LogView
+
+* IntraSeek
+
+* Make some kind of manual
+
+* Make start screen
 
