Changes for Roxen Challenger 1.2.36 Yellow
Rev: CHANGES:1.139

--- a/CHANGES
+++ b/CHANGES
@@ -12,6 +12,8 @@ o <expire-time> now supports the argument "now".
 
 o Updated Pike 0.6
 
+o Fixed bug in module trust levels.
+
 
 Changes since Roxen Challenger 1.2.34 Yellow
 -----------------------------------------------
