--- a/CHANGES
+++ b/CHANGES
@@ -12,7 +12,7 @@ o <expire-time> now supports the argument "now".
 
 o Updated Pike 0.6
 
-o Fixed bug in module trust levels.
+o Fixed bug in module security levels and improved documentation.
 
 
 Changes since Roxen Challenger 1.2.34 Yellow
