--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,9 @@
+Changes since Roxen Challenger 1.2.36 Yellow
+-----------------------------------------------
+
+o PATH_INFO handling has been extracted into a separate module.
+
+
 Changes since Roxen Challenger 1.2.35 Yellow
 -----------------------------------------------
 
