Some more changes since 1.2.36.
Rev: CHANGES:1.143

--- a/CHANGES
+++ b/CHANGES
@@ -5,6 +5,8 @@ o PATH_INFO handling has been extracted into a separate module.
 
 o The CGI module now uses the PATH_INFO module to do PATH_INFO handling.
 
+o Added option to disable the user listing in the userfs module.
+
 
 Changes since Roxen Challenger 1.2.35 Yellow
 -----------------------------------------------
