--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,9 @@
 Changes since Roxen Challenger 1.2.37 Yellow
 -----------------------------------------------
 
-o Fixed broken dependencies rule.
+o Roxen 1.3 is now split off from Roxen 1.2.
+
+o Some localization support added.
 
 o Config action "Thread backtrace" removed from the 1.2 dist.
 
