--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,7 @@
 Changes since Roxen Challenger 1.2.37 Yellow
 -----------------------------------------------
 
-o Roxen 1.3 is now split off from Roxen 1.2.
+o Roxen 1.4 is now split off from Roxen 1.2/1.3.
 
 o Some localization support added.
 
