--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,4 @@
-Changes since Roxen Challenger 1.2.46 Infra Red
+Changes since Roxen Challenger 1.2.46 Infrared
 -----------------------------------------------
 
 o Improved Postgres configure tests.
