--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,11 @@
+Changes since Roxen Challenger 1.2.47 Yellow
+-----------------------------------------------
+
+o FreeBSD thread fix.
+
+o Updated Czech language module.
+
+
 Changes since Roxen Challenger 1.2.46 Infrared
 -----------------------------------------------
 
