--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,15 @@
+Changes since Roxen Challenger 1.2.76 Yellow
+-----------------------------------------------
+
+o Makefiles fixed to work with !gmake again.
+
+o Initial support of Linux sendfile in HTTPAccept.
+
+o Fixed --pid-file.
+
+o Quoting fixes and changes.
+
+
 Changes since Roxen Challenger 1.2.61 Yellow
 -----------------------------------------------
 
