--- a/CHANGES
+++ b/CHANGES
@@ -9,6 +9,9 @@ o Fixed old bug in roxenlib where the id object wasn't properly
 
 o Fixed race in gtext.
 
+o Replaced ftp with ftp2. Configurations will automaticly change from
+  ftp2 to ftp.
+
 
 Changes since Roxen Challenger 1.2.76 Yellow
 -----------------------------------------------
