More changes for 1.2.87.
Rev: CHANGES:1.165

--- a/CHANGES
+++ b/CHANGES
@@ -12,6 +12,8 @@ o Fixed race in gtext.
 o Replaced ftp with ftp2. Configurations will automaticly change from
   ftp2 to ftp.
 
+o Added better documentation for virtual user hosting.
+
 
 Changes since Roxen Challenger 1.2.76 Yellow
 -----------------------------------------------
