--- a/CHANGES
+++ b/CHANGES
@@ -5,7 +5,7 @@ o Fixed problems with limits in tar by archiving the manual separately.
 
 o Fixed old bug in roxenlib where the id object wasn't properly
   copied. This has affected several parts of Roxen, among other
-  things possibly resuling in broken gtexts.
+  things possibly resulting in broken gtexts.
 
 o Fixed race in gtext.
 
