--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,9 @@
+Changes since Roxen Challenger 1.2.95 Yellow
+-----------------------------------------------
+
+o Reverted the error messages introduced in 1.2.95.
+
+
 Changes since Roxen Challenger 1.2.93 Yellow
 -----------------------------------------------
 
