--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,46 @@ Changes since Roxen Challenger 1.2.95 Yellow
 
 o Reverted the error messages introduced in 1.2.95.
 
+o Automated the CLASSPATH setting (for selvlets).
+
+o Install script now tries to locate installed databases etc and set
+  enviroment variables accordingly.
+
+o Fixed resolving to handle computers without /etc/resolv.conf
+
+o Added option to build 40-bit version of the Crypto module. (Ugh.)
+
+o Added internal handling of cgi-scripts. This eliminates the need for
+  an external cgi-script wrapper and speeds up execution.
+
+o Rewrote CGI-module. In contrast to the old cgi.pike this one
+  acctually looks nice. Except for code that you can read and enjoy
+  there is now a uid and group cache.
+
+o Added possibility to parse the output from CGI-scripts. Possibly
+  putting an end to the biggest FAQ of them all.
+
+o Added <cgi> tag.
+
+o Upgraded libtool for libiodbc.
+
+o Changed default build from 1.2 to 1.3.
+
+o Fixed so that Challenger doesn't unnessesarily try to become
+  superuser to write config files.
+
+o Fixed so that Challenger doesn't unnessesarily change permissions on
+  files.
+
+NOTE: The two changes above can lead to Challenger beeing unable to
+      read files from an old installation. Check permissions on the
+      following files to make sure the user you are running Roxen as
+      can read (and write) them:
+ 
+ etc/supports
+ configurations/*
+ logs/*
+
 
 Changes since Roxen Challenger 1.2.93 Yellow
 -----------------------------------------------
